--- a/_posts/2015-04-20-planes.markdown
+++ b/_posts/2015-04-20-planes.markdown
@@ -5,6 +5,7 @@ author: "Wferr"
 avatar: "img/authors/wferr.png"
 image: "img/a.jpg"
 date:   2015-04-20 12:12:12
+link: "planes"
 ---
 
 ### Dolor sit amet?
