--- a/_posts/2015-04-20-planes.markdown
+++ b/_posts/2015-04-20-planes.markdown
@@ -1,8 +1,8 @@
 ---
 title:  "París"
 subtitle: "La ciudad del amor"
-author: "Aurore & Gérard"
+author: "Angel y Teresa"
 avatar: "img/authors/wferr.png"
-image: "img/ring.jpg"
+image: "img/parisBack.jpg"
 date:   2015-04-20 12:12:12
 ---
