added paris content

--- a/_posts/2016-03-30-paris.markdown
+++ b/_posts/2016-03-30-paris.markdown
@@ -6,3 +6,15 @@ avatar: "img/authors/wferr.png"
 image: "img/parisBack.jpg"
 date:   2016-03-30 12:12:12
 ---
+
+Voy a empezar este pequeño post sobre la ciudad del amor con algo que aunque parezca mentira me ha costado mucho encontrar, un buen tour por el barrio de Montmartre, he buscado por la red, he revisado guias de viaje pero ninguno me acababa de convencer así que he decidido montarmelo por mi cuenta.
+
+Hay que añadir que queria además de ver el barrio también conocer los puntos donde se rodó la película de "Amelie", que ya que voy a París quiero verlos también.
+
+Aquí os dejo el mapa, más adelante con mas tiempo iré mejorando la entrada y agregando fotitos del viaje que nos pegamos Teresa y yo a París.
+
+Como recomendación nosotros empezamos en el metro Lamark-Caulaincourt y terminamos en Blanche junto al Moulin Rouge.
+
+![Ruta Montmartre](img/rutaMontmartre.PNG)
+
+Para el que quiera modificarla, mejorarla o simplemente le sea más cómodo <a href="https://goo.gl/6Qa77h" target="\_blank">está</a> es la ruta en formato google maps.
