Fixed photo issues

--- a/_posts/2016-12-01-mexico.md
+++ b/_posts/2016-12-01-mexico.md
@@ -93,7 +93,7 @@ El punto neuralgico del centro de Ciudad de Mexico no podria ser otro que el Zó
 Como posible ruta os pongo la que nosotros hicimos para la zona centro, en ella sólo marco los puntos más importantes pero 
 intentaré contaros todo lo que hicimos.
 
-![Ruta Centro](img/ruta_centro_mexico.jpg)
+![Ruta Centro](img/ruta_centro_mexico.png)
 
 El turibus nos dejó en el propio zocalo por lo que la ruta la cambiamos un poco de orden pero en resumen 
 es más o menos lo que vimos, lo primero como comento fue el imponente zócalo, con la catedral, la más grande de todo
