--- a/_posts/2016-12-01-mexico.md
+++ b/_posts/2016-12-01-mexico.md
@@ -1,9 +1,9 @@
 ---
 title:  "Mexico"
 subtitle: "La Nueva España"
-author: "Angel y Teresa"
+author: "Ángel y Teresa"
 avatar: "img/authors/wferr.png"
-image: "img/mexicoBack.jpg"
+image: "img/mexico/mexicoBack.jpg"
 date:   2016-12-01 12:12:12
 ---
 
@@ -72,7 +72,7 @@ ladrones saben que el taxi no lleva dinero en efectivo, todo se hace en la taqui
 Hay varias empresas de taxis seguros, sinceramente creo que los precios no varian mucho de unos a otros, nosotros nos 
 decantamos por la empresa Yellow Cab que nos cobro 359 pesos por un viaje a la zona de condesa donde esta nuestro hotel.
 
-![Ticket Taxi](img/taxi_aeropuerto.jpg)
+![Ticket Taxi](img/mexico/taxi_aeropuerto.jpg)
 
 Ciudad de Mexico como he dicho es una ciudad inmensa, para visitarla hay varias formas, desde metro, metrobus, taxi
 o la linea de buses turísticos, nosotros decidimos esta última opción, quizá no es la más economica pero si que es segura y 
@@ -93,7 +93,7 @@ El punto neuralgico del centro de Ciudad de Mexico no podria ser otro que el Zó
 Como posible ruta os pongo la que nosotros hicimos para la zona centro, en ella sólo marco los puntos más importantes pero 
 intentaré contaros todo lo que hicimos.
 
-![Ruta Centro](img/ruta_centro_mexico.jpg)
+![Ruta Centro](img/mexico/ruta_centro_mexico.jpg)
 
 El turibus nos dejó en el propio zocalo por lo que la ruta la cambiamos un poco de orden pero en resumen 
 es más o menos lo que vimos, lo primero como comento fue el imponente zócalo, con la catedral, la más grande de todo
@@ -111,3 +111,16 @@ no entramos aunque se puede visitar por dentro y supongo que ampliarán las expl
 A un lateral del templo podemos encontrar la Iglesia Ex Teresa, aquí podemos ver como Ciudad de Mexico literalmente
 se está hundiendo poco a poco. Si vemos la iglesia desde un lateral de la calle podemos ver claramente la inclinación de la misma.
 
+Como recomendaciones en la zona centro es que disfruteis de sus calles, de su gente, de sus tascas, si es cierto que todas las 
+recomendaciones dicen que la zona centro es sobre todo turística y que por la noche se queda un poco desangelada e incluso peligrosa, 
+por desgracia ahí no puedo hacer ninguna recomendación ya que acababamos tan cansados al final del día que nos ibamos pronto a 
+descansar al hotel aunque sí que estuvimos hasta tarde y no lo vi para nada peligroso.
+
+*Pulque*
+
+Si sois como yo que nunca habiais oido hablar del pulque deciros que es una bebida fermentada
+prehispánica y que se obtiene del captus del maguey, debido a su peculiar saber lo que se suele hacer es 
+mezclarla con frutas, los sabores más característicos y en mi opinion más ricos son con mango y con avena, realmente
+fue un descubrimiento, una bebida densa y que si bebes en cantidad podria considerarse una comida completa ya que es bastante densa. 
+
+Es una bebida casi exclusiva de la zona de Ciudad de Mexico por lo que no podeis iros de ahí sin probarla.
